seperate javascript source on js file

--- a/WebContent/tip05/tip05.html
+++ b/WebContent/tip05/tip05.html
@@ -4,20 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!-- 	<script src="js/tip05.js"></script> -->
-
-	<script type="text/javascript">
-		$(function() {
-			$(".size span, .color span").click(function() {
-				$(this).addClass("active");
-				$(this).siblings().removeClass("active"); /* 원래 적용되어 있던건 다 사라지게 */
-			});
-			
-			$(".like").click(function() {
-				$(this).toggleClass("active");
-			});
-		});
-	</script>
+	<script src="js/tip05.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
